--- a/index.html
+++ b/index.html
@@ -6,5 +6,22 @@
 <body>
 
 <h1>Hello Gracie, this is your clue!</h1>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+Your four-legged friend's cabin
 </body>
 </html>
